--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,183 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      http-equiv="etag"
+      content="c4b62a01384fe6e4c256fb9dceec00e96f69b357-webstudio-635396"
+    />
+    <link
+      id="googleidentityservice"
+      type="text/css"
+      media="all"
+      rel="stylesheet"
+      href="https://accounts.google.com/gsi/style"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://bin.bnbstatic.com/static/images/common/favicon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://bin.bnbstatic.com/static/images/bnb-for/brand.png"
+    />
+    <link
+      rel="icon"
+      href="https://bin.bnbstatic.com/static/images/bnb-for/brand.png"
+    />
+    <meta
+      name="msapplication-TileImage"
+      content="https://bin.bnbstatic.com/static/images/bnb-for/brand.png"
+    />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta
+      name="360-site-verification"
+      content="e362348efd31ed6e77bcf0ba4963a6de"
+    />
+    <meta name="sogou_site_verification" content="tKz9Rld4qH" />
+    <meta property="og:url" content="https://binance.com/en" />
+    <meta name="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Bitcoin Exchange | Cryptocurrency Exchange | Binance"
+    />
+    <meta
+      property="og:image"
+      content="https://public.bnbstatic.com/static/images/common/ogImage.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/fonts/bp/BinancePlex-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/fonts/bp/BinancePlex-Medium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/fonts/bp/BinancePlex-SemiBold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link rel="canonical" href="https://accounts.binance.com/vi/login" />
+    <meta charset="utf-8" />
+    <title data-shuvi-head="true">
+      Bitcoin Exchange | Cryptocurrency Exchange | Binance
+    </title>
+    <meta
+      name="keywords"
+      content="Blockchain Crypto Exchange, Cryptocurrency Exchange, Bitcoin Trading, Ethereum price trend, BNB, CZ, BTC price, ETH wallet registration, LTC price, Binance, Poloniex, Bittrex"
+      data-shuvi-head="true"
+    />
+    <meta
+      property="og:title"
+      content="Bitcoin Exchange | Cryptocurrency Exchange | Binance"
+      data-shuvi-head="true"
+    />
+    <meta property="og:site_name" content="Binance" data-shuvi-head="true" />
+    <meta
+      property="og:image"
+      content="https://public.bnbstatic.com/static/images/common/ogImage.jpg"
+      data-shuvi-head="true"
+    />
+    <meta
+      property="twitter:title"
+      content="Bitcoin Exchange | Cryptocurrency Exchange | Binance"
+      data-shuvi-head="true"
+    />
+    <meta property="twitter:site" content="Binance" data-shuvi-head="true" />
+    <meta
+      property="twitter:image"
+      content="https://public.bnbstatic.com/static/images/common/ogImage.jpg"
+      data-shuvi-head="true"
+    />
+    <meta
+      property="twitter:image:src"
+      content="https://public.bnbstatic.com/static/images/common/ogImage.jpg"
+      data-shuvi-head="true"
+    />
+    <meta
+      property="twitter:card"
+      content="summary_large_image"
+      data-shuvi-head="true"
+    />
+    <meta name="robots" content="index" data-shuvi-head="true" />
+    <meta
+      name="description"
+      content="Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume"
+      data-shuvi-head="true"
+    />
+    <meta
+      property="og:description"
+      content="Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume"
+      data-shuvi-head="true"
+    />
+    <meta
+      property="twitter:description"
+      content="Binance cryptocurrency exchange - We operate the worlds biggest bitcoin exchange and altcoin crypto exchange in the world by volume"
+      data-shuvi-head="true"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/chunks/layout-b3a8.697e0259.js"
+      as="script"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/chunks/page-53df.e4b5e33f.js"
+      as="script"
+    />
+    <link
+      rel="stylesheet"
+      href="https://bin.bnbstatic.com/static/css/74405f97.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://bin.bnbstatic.com/static/css/2b31456f.chunk.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://bin.bnbstatic.com/static/css/9a1f9e7a.chunk.css"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/fonts/bp/BinancePlex-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/fonts/bp/BinancePlex-Medium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="https://bin.bnbstatic.com/static/fonts/bp/BinancePlex-SemiBold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
